# mini-renderer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  nostd.yml  test.yml
examples/: camera.rs  egui.rs  model.rs  sandbox.rs  texture2D.rs  triangle.rs
src/: color.rs  graphics.rs  lib.rs  math.rs  pipeline.rs  renderer.rs  target.rs
src/graphics/: color.rs  primitive.rs  rasterizer.rs  topology.rs
src/pipeline/: parallel.rs  serial.rs  shader.rs  varying.rs
tests/: basic_rendering.rs
