[package]
name = "mini-renderer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
image = "0.25.9"
softbuffer = { git = "https://github.com/rust-windowing/softbuffer.git"}
tobj = "4.0.3"
winit = "0.30.12"

[dependencies]
glam = {version = "0.32.0", optional = true}

[features]
default = ["glam"]
glam = ["dep:glam"]
