[package]
name = "mini-renderer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
egui = "0.33.3"
egui-winit = "0.33.3"
egui_demo_lib = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = "0.25.9"
softbuffer = { git = "https://github.com/rust-windowing/softbuffer.git"}
tobj = "4.0.3"
winit = "0.30.12"

[dependencies]
glam = { version = "0.32.0", optional = true, default-features = false }
libm = { version = "0.2.16", optional = true }
rayon = { version = "1.11.0", optional = true }

# for minimal-versions CI only:
[target.'cfg(any())'.dependencies]
num-bigint = "0.4.4"

[features]
default = ["std", "glam"]
std = ["glam?/std"]
rayon = ["dep:rayon"]
glam = ["dep:glam"]

libm = ["dep:libm", "glam?/libm"]
